--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="gallery">GALLERY</string>
     <string name="photo">CHOOSE PHOTO</string>
     <string name="string_open_camera">Open Camera</string>
+    <string name="string_choose_file">Open Gallery</string>
     <string name="string_next">Next</string>
     <string name="string_share">Share</string>
 
